@@ -1,3 +1,10 @@
+2002-09-08  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tools/tiff2ps.c: Don't emit BeginData/EndData DSC comments
+	since we are unable to properly include the amount to skip. 
+	
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=80
+
 2002-09-02  Andrey Kiselev  <dron@remotesensing.org>
 
 	* /libtiff/tif_dirread.c: Fixed problem with SBYTE type data fetching
